--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <center><h1></h1></center>
-<center><img src="sigmo.PNG" alt="sigmo"></center>
+<center><img src="sigmo.PNG"</center>
 <center><h1> <a href="https://en.wikipedia.org/wiki/Terraria">Добро пожаловать в мир Terraria!</a><br></h1>
 <center><h1> <a href="page1.html">Кратко о tModLoader и что это такое</a><br></h1>  
     <center> <img src="1234.png"></center>
