--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
 <body>
 
 <center><h1></h1></center>
-<center><img src="TML.PNG"</center>
+<center><img src="TML.PNG"></center>
 <center><h1>Добро пожаловать в мир tModLoader!</a><br></h1>
 <center><h2> <a href="index.html">Вернуться в мир Terraria!</a><br></h2></center>
 
